--- a/src/sass/style.back.scss
+++ b/src/sass/style.back.scss
@@ -11,6 +11,6 @@
 @import 'backpages/back_login';
 @import 'backpages/back_index';
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
-@import 'backpages/activity_mg';
+@import 'backpages/back_activity';
 @import 'backpages/back_products';
 @import 'backpages/back_product_detail'
