--- a/src/sass/layout/_back.aside.scss
+++ b/src/sass/layout/_back.aside.scss
@@ -35,6 +35,9 @@
                     display: inline;
                 }
             }
+            a.-on{
+                color: $color_W;
+            }
             a:hover{
                 background-color: $color_W ;
                 color: $color_Y;
