--- a/src/sass/style.back.scss
+++ b/src/sass/style.back.scss
@@ -12,5 +12,6 @@
 @import 'backpages/back_index';
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
 @import 'backpages/back_activity';
+@import 'backpages/back_activity_detail';
 @import 'backpages/back_products';
-@import 'backpages/back_product_detail'
+@import 'backpages/back_product_detail';
