data: 新增首頁首圖插圖

--- a/src/sass/frontpages/_index.scss
+++ b/src/sass/frontpages/_index.scss
@@ -1,10 +1,10 @@
 .indexTop{
     width: 100%;
     overflow: hidden;
-    height: 780px;
+    height: 700px;
     max-width: 1920px;
     position: relative;
-    background-image: url("../img/index/index_top_bg_1920.png");
+    background-image: url("../img/index/1920x700_indexbg.jpg");
     background-size: auto;
     background-position-x: center;
     background-repeat: no-repeat;
