feat: 商品介紹文intro 修改樣式，增加數量調整功能，停止預設事件a.放入購物車、a.直接購買

--- a/src/sass/frontpages/_product_detail.scss
+++ b/src/sass/frontpages/_product_detail.scss
@@ -250,9 +250,7 @@
 
 .intro_area {
   // 區塊================
-  // &:nth-child(even) .pd_intro P{
-  //   order:3;
-  // }
+  
   .pd_intro {
     width: 900px;
     display: flex;
@@ -262,6 +260,10 @@
     // border: 2px solid #ccc;
     border-radius: 8px;
     padding: 25px;
+
+    &:nth-child(even)  P{
+      order:-1;
+    }
 
     .pd_intro_pic {
       display: flex;
