chore: 安裝 gsap, feat: 首頁動畫

--- a/src/sass/frontpages/_index.scss
+++ b/src/sass/frontpages/_index.scss
@@ -17,58 +17,58 @@
     //插圖
     .sun{
         width: 100px;
-        top: 120px;
-        left: 1000px;
+        top: 12%;
+        left: 78%;
     }
     .top-cloud{
         width: 130px;
     }
     .top-cloud1{
-        top: 180px;
-        left: 35px;
+        top: 20%;
+        left: 3%;
     }
     .top-cloud2{
-        top: 100px;
-        left: 200px;
+        top: 12%;
+        left: 15%;
     }
     .top-cloud3{
-        top: 150px;
-        left:870px;
+        top: 23%;
+        left: 66%;
     }
     .top-cloud4{
-        top: 70px;
-        left: 1100px;
+        top: 11%;
+        left: 88%;
     }
     .top-horse{
         width: 240px;
-        top: 210px;
-        left: 40px;
+        top: 31%;
+        left: 2%;
     }
     .top-deer{
         width: 210px;
-        top: 330px;
-        left: 180px;
+        top: 47%;
+        left: 15%;
         z-index: 2;
     }
     .top-sheep{
         width: 250px;
-        top: 300px;
-        left: 350px;
+        top: 41%;
+        left: 30%;
     }
     .top-pig{
         width: 210px;
-        top: 420px;
-        left: 540px;
+        top: 60%;
+        left: 45%;
     }
     .top-alpaca{
         width: 210px;
-        top: 300px;
-        left: 730px;
+        top: 42%;
+        left: 61%;
     }
     .top-cow{
         width: 340px;
-        top: 260px;
-        left: 885px;
+        top: 36%;
+        left: 73%;
     }
 
 }
