feat: 登入、註冊 驗證信箱、密碼格式；其他先停止送出&連結預設行為

--- a/src/layout/login.html
+++ b/src/layout/login.html
@@ -4,12 +4,12 @@
         <div class="loginBlock ">
             <form action="" method="POST" id="login_form">
                 <h4>登入</h4>
-                <label for=""><h5>電子郵件</h5></label>
-                <input type="email" name="usermail">
-                <label for=""><h5>密碼</h5></label>
-                <input type="password" name="password">
+                <label for="userMail"><h5>電子郵件</h5></label>
+                <input type="email" name="userMail" id="userMail">
+                <label for="password"><h5>密碼</h5></label>
+                <input type="password" name="password" id="password">
                 <a href="#" class="forget">忘記密碼？</a>
-                <button type="submit" id="login_btn">登入</button>
+                <button type="button" id="login_btn">登入</button>
                 <button type="button" id="FBlogin_btn">透過FACEBOOK登入</button>
                 <a href="#" class="register">還不是Sìkha會員嗎？點我註冊</a>
             </form>
