--- a/src/layout/password_reset.html
+++ b/src/layout/password_reset.html
@@ -8,7 +8,7 @@
                 <label for=""><h5>電子郵件</h5></label>
                 <input type="email" name="usermail">
                 
-                <button type="submit" id="next">送出</button>
+                <button type="button" id="send_mail">送出</button>
             </form>
             <i class="bi bi-x"></i>
         </div>
