--- a/src/layout/password_reset_2.html
+++ b/src/layout/password_reset_2.html
@@ -5,11 +5,11 @@
             <form action="" method="POST" id="password_reset">
                 <h4>重設密碼</h4>
                 <p>請輸入您的新密碼</p>
-                <label for=""><h5>密碼</h5></label>
-                <input type="password" name="password">
+                <label for="password"><h5>密碼</h5></label>
+                <input type="password" name="password" id="password">
                 <label for=""><h5>密確認碼</h5></label>
-                <input type="password" name="password">
-                <button type="submit" id="next">繼續</button>
+                <input type="password" name="repassword" id="repassword">
+                <button type="button" id="send_psd">繼續</button>
             </form>
             <i class="bi bi-x"></i>
         </div>
