--- a/src/layout/register_2.html
+++ b/src/layout/register_2.html
@@ -5,22 +5,22 @@
                 <h4>註冊</h4>
                 <div>
                     <div class="u_name">
-                        <label for=""><h5>姓名</h5></label>
-                        <input type="name" name="userName">
+                        <label for="userName"><h5>姓名</h5></label>
+                        <input type="name" name="userName" id="userName">
                     </div>
                     <div class="u_birth">
-                        <label for=""><h5>生日</h5></label>
-                        <input type="date" name="birthday">
+                        <label for="birthday"><h5>生日</h5></label>
+                        <input type="date" name="birthday" id="birthday">
                     </div>
                 </div>
                 <div class="u_address twzipcode">
-                    <label for=""><h5>聯絡地址</h5></label>
+                    <label for="address"><h5>聯絡地址</h5></label>
                     <select name="county" id="county"></select><select name="district" id="district" ><select name="zipcode" id="zipcode"></select>
-                    <input type="text" name="Street">
+                    <input type="text" name="Street" id="Street">
                 </div>
-                <label for=""><h5>連絡電話</h5></label>
-                <input type="number" name="phoneNumber">
-                <button type="submit" id="next">繼續</button>
+                <label for="phoneNumber"><h5>連絡電話</h5></label>
+                <input type="number" name="phoneNumber" id="phoneNumber">
+                <button type="button" id="send">繼續</button>
             </form>
             <i class="bi bi-x"></i>
         </div>
