--- a/src/layout/register_3.html
+++ b/src/layout/register_3.html
@@ -3,7 +3,7 @@
         <div class="loginBlock ">
             <form action="" method="POST" id="register_from">
                 <h4>註冊完成</h4>
-                <p>您已完成註冊，請重新登入</p>
+                <p>您已完成註冊，歡迎加入Sìkha牧場</p>
                 <img src="../img/material/animal_shika_jump2.png" alt="">
                 <button type="button" id="register_complete">完成</button>
             </form>
