--- a/src/layout/register.html
+++ b/src/layout/register.html
@@ -4,13 +4,13 @@
         <div class="loginBlock ">
             <form action="" method="POST" id="login_form">
                 <h4>註冊</h4>
-                <label for=""><h5>電子郵件</h5></label>
-                <input type="email" name="usermail">
-                <label for=""><h5>密碼</h5></label>
-                <input type="password" name="password">
-                <label for=""><h5>確認密碼</h5></label>
-                <input type="password" name="password">
-                <button type="submit" id="next">繼續</button>
+                <label for="userMail"><h5>電子郵件</h5></label>
+                <input type="email" name="userMail" id="userMail">
+                <label for="password"><h5>密碼</h5></label>
+                <input type="password" name="password" id="password">
+                <label for="repassword"><h5>確認密碼</h5></label>
+                <input type="password" name="repassword" id="repassword">
+                <button type="button" id="next">繼續</button>
             </form>
             <i class="bi bi-x"></i>
         </div>
