--- a/src/sass/frontpages/_animal.scss
+++ b/src/sass/frontpages/_animal.scss
@@ -5,7 +5,7 @@
 	display: block;
 }
 
-.container{
+.animal-container{
     margin: 0 auto;
 }
 
@@ -151,31 +151,33 @@ section:nth-child(odd) img{
     margin: 110px 20px 20px 0px;
 }
 
-
-@media screen and (max-width: 575.98px){
-    section:not(._on){
-        display: none;
-    }
-    
-}  
-
-
-
-@media screen and (min-width: 995px){
-    section:nth-child(odd){
-        .item{  
-            background-color: rgb(226, 180, 180);
-                .item_img{
-                    order: 2;
-                    background-color: rgb(228, 90, 90);
-                }
-                .item_p{
-                    order: 1;
-                    margin: 100px 0px 0px 0px;
-                }
+.animal-container{
+    @media screen and (max-width: 575.98px){
+        section:not(._on){
+            display: none;
         }
-    }
-} 
+        
+    }  
+}
+
+
+.animal-container{
+    @media screen and (min-width: 995px){
+        section:nth-child(odd){
+            .item{  
+                background-color: rgb(226, 180, 180);
+                    .item_img{
+                        order: 2;
+                        background-color: rgb(228, 90, 90);
+                    }
+                    .item_p{
+                        order: 1;
+                        margin: 100px 0px 0px 0px;
+                    }
+            }
+        }
+    } 
+}
 
 @media screen and (max-width: 1200px){
     .item_p{
