--- a/src/sass/layout/_login.scss
+++ b/src/sass/layout/_login.scss
@@ -58,16 +58,19 @@ div#back_bg {
         @media (max-width: 840.98px) {
           width: auto;
         }
+        @include mobile{
+          max-height: 100vw;
+        }
 
         h4 {
           margin-bottom: 20px;
         }
-        h5>span{
+        h5 > span {
           font-size: $fs-xs;
           color: red;
         }
 
-        label{
+        label {
           height: 42px;
         }
         input {
@@ -123,7 +126,11 @@ div#back_bg {
           }
         }
         // 繼續的按鈕
-        #next {
+        #next,
+        #send,
+        #send_mail,
+        #send_psd,
+        #register_complete {
           margin-top: 75px;
           @include buttonSet;
           width: 100%;
@@ -143,83 +150,108 @@ div#back_bg {
   }
 }
 
-
 // 註冊填資料 表單
-#register_from{
-    margin: 0 20px;
-    width: 450px;
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-    // @include borderTest;
+#register_from {
+  margin: 0 20px;
+  width: 450px;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  // @include borderTest;
+  @media (max-width: 840.98px) {
+    width: auto;
+  }
+
+  h5>span{
+    color: red;
+    font-size: $fs-xs;
+  }
+
+  h4 {
+    margin: 0 auto;
+    margin-bottom: 20px;
+  }
+
+  input {
+    padding: 10px 20px;
+    width: 100%;
+    height: 50px;
+    background-color: #ededed;
+    border-radius: 5px;
+    border: 1px solid #c4c4c4;
+    font-size: $fs-xs;
+    margin-bottom: 10px;
+    padding: 0 20px;
+
+    @include mobile{
+      height: 40px;
+      // width: 222px;
+    }
+  }
+
+  #next,
+  #register_complete,
+  #send,
+  #send_mail,
+  #send_psd {
+    margin-top: 20px;
+    @include buttonSet;
+    width: 100%;
+    border-radius: 5px;
+    height: 50px;
+    font-size: $fs-xs;
+    cursor: pointer;
+
     @media (max-width: 840.98px) {
-      width: auto;
+      margin-top: 0;
     }
+  }
 
-    h4 {
-        margin: 0 auto;
-      margin-bottom: 20px;
-    }
+  p {
+    margin: 0 auto;
+  }
+  img {
+    width: 195px;
+    margin: 40px auto;
+  }
+}
 
-    input {
-      padding: 10px 20px;
-      width: 100%;
-      height: 50px;
-      background-color: #ededed;
-      border-radius: 5px;
-      border: 1px solid #c4c4c4;
+// ==================
+#twzipcode {
+  div{
+    display: inline;
+    select {
       font-size: $fs-xs;
-      margin-bottom: 10px;
-
-    }
-    select{
-        font-size: $fs-xs;
-        width: 219px;
+      width: 219px;
       height: 50px;
       background-color: #ededed;
       border-radius: 5px;
       border: 1px solid #c4c4c4;
       margin-bottom: 5px;
-      @media (max-width: 840.98px){
-          width: 100%;
-      }
-
-    }
-
-    #zipcode{
-        display: none;
-    }
-
-    #county{
-        margin-right: 10px;
-    }
-
-    #next,#register_complete {
-        margin-top: 20px;
-        @include buttonSet;
+      padding: 0 20px;
+      @media (max-width: 840.98px) {
         width: 100%;
-        border-radius: 5px;
-        height: 50px;
-        font-size: $fs-xs;
-        cursor: pointer;
-
-        @media (max-width: 840.98px) {
-            margin-top: 0;
-        }
       }
-
-      p{
-          margin: 0 auto;
+      @include mobile{
+        // width: 222px;
+        height: 40px;
       }
-      img{
-          width: 195px;
-          margin: 40px auto;
-      }
+    }
+    .zipcode {
+      display: none;
+    }
+  
+    .county {
+      margin-right: 8px;
+    }
+  }
 
 }
 
+// ==================
+
 // 重設密碼表單
-#password_reset{
+#password_reset {
   width: 325px;
   margin: 20px;
   display: flex;
@@ -234,7 +266,7 @@ div#back_bg {
     margin-bottom: 20px;
   }
 
-  p{
+  p {
     margin-bottom: 20px;
   }
   input {
@@ -263,6 +295,4 @@ div#back_bg {
       margin-top: 30px;
     }
   }
-
-
 }
