--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,3 +21,4 @@
 @import './frontpages/member_activity';
 @import './frontpages/member_revise';
 @import './frontpages/member_checklist';
+@import './layout/member.tab';
