style: mixin新增768~1200px的media query, 登陸頁和info.html rwd

--- a/src/layout/footer.html
+++ b/src/layout/footer.html
@@ -1,13 +1,13 @@
 <footer class="frontFooter">
-    <!-- <img src="./img/material/footer_tree.svg" alt="" class="footersvg tree1">
+    <img src="./img/material/footer_tree.svg" alt="" class="footersvg tree1">
     <img src="./img/material/footer_tree.svg" alt="" class="footersvg tree2">
     <img src="./img/material/footer_cow.svg" alt="" class="footersvg cow1">
-    <img src="./img/material/footer_cow.svg" alt="" class="footersvg cow2"> -->
+    <img src="./img/material/footer_cow.svg" alt="" class="footersvg cow2">
 
-    <!-- <img src="./img/material/footerdec.png" alt="" class="footerdec">
-    <img src="./img/material/hilltop.svg" alt="" class="hilltop"> -->
+    <!-- <img src="./img/material/footerdec.png" alt="" class="footerdec"> -->
+    <img src="./img/material/hilltop.svg" alt="" class="hilltop">
 
-    <img src="./img/material/ftop.png" alt="" class="ftop">
+    <!-- <img src="./img/material/ftop.png" alt="" class="ftop"> -->
     <div class="footerbg">
         <div class="footermain container-lg">
             <h1 class="footerLogo"><img src="./img/logo_white.svg" alt=""></h1>
@@ -27,4 +27,4 @@
 
 </footer>
 
-<script src="js/header.js"></script>
+<script src="js/header_footer.js"></script>
