--- a/src/sass/mixin/_mixin.scss
+++ b/src/sass/mixin/_mixin.scss
@@ -20,6 +20,11 @@
       @content;
     }
 }
+@mixin desktop-s{
+  @media (min-width: 768px) and (max-width: 1199.98px){
+    @content;
+  }
+}
 
 // ===== 測試用border =====
 @mixin borderTest($borderc:red){
