--- a/src/layout/head.html
+++ b/src/layout/head.html
@@ -9,5 +9,6 @@
     <link rel="icon" href="img/logo_web.ico" type="image/x-icon"/>
     <script src="./js/vendors/jquery-3.6.0.min.js"></script>
     <script src="./js/vendors/vue.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.14/vue.js"></script>
+    <script src="js/vendors/gsap.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.14/vue.js"></script> -->
     <!-- <script src="./js/vendors/vue.min.js"></script> -->
