--- a/src/layout/header.html
+++ b/src/layout/header.html
@@ -1,42 +1,54 @@
 <header class="frontHeader">
-    <nav class="main_sel container-lg">
-        <h1><a href="index.html"><img src="../img/logo_16B1AA.svg" alt="Sìkha牧場" class="headerLogo"></a></h1>
-        <div class="navRight">
-            <a href="#" class="head-icon"><i class="bi bi-cart2 cartIcon"><span class="cartCount">1</span></i></a>
-            <a href="member.html" class="head-icon"><i class="bi bi-person memberIcon"></i></a>
-            <div class="ham_btn">
-                <span class="ham_line ham_line_1"></span>
-                <span class="ham_line ham_line_2"></span>
-                <span class="ham_line ham_line_3"></span>
-            </div>
-
-            <!-- 購物車彈跳窗 -->
-            <!-- <div class="blackBg">
-                <div class="shoppingCar">
-                    <div class="carTitle">購物車明細</div>
-                    <ul>
-                        <li><p>商品名稱</p><p>價格</p><p>數量</p><p>小計</p></li>
-                        <li></li>
-                    </ul>
-                </div>
-            </div>  -->
-
-            <nav class="hamSel">
-                <ul id="appMenu" class="hamMenu">
-                    <template v-for="menu in menus">
-                        <li class="hamMenuItem">
-                            <a :href="menu.link">
-                                <div class="iconContainer">
-                                    <img :src="menu.icon" alt="" class="menuIcon">
-                                </div>
-                                <h5 class="menuTitle">{{menu.title}}</h5>
-                            </a>
-                        </li>
-                    </template>
-                </ul>
-
-            </nav>
-        </div>
-    </nav>
-    <div class="hamMask" style="opacity: 0;"></div>
+	<nav class="main_sel container-lg">
+		<h1>
+			<a href="index.html"
+				><img src="../img/logo_16B1AA.svg" alt="Sìkha牧場" class="headerLogo"
+			/></a>
+		</h1>
+		<div class="navRight">
+			<a href="#" class="head-icon" @click.prevent="openCart"
+				><i class="bi bi-cart2 cartIcon"><span class="cartCount">1</span></i></a
+			>
+			<a href="member.html" class="head-icon"
+				><i class="bi bi-person memberIcon"></i
+			></a>
+			<div class="ham_btn">
+				<span class="ham_line ham_line_1"></span>
+				<span class="ham_line ham_line_2"></span>
+				<span class="ham_line ham_line_3"></span>
+			</div>
+			<nav class="hamSel">
+				<ul id="appMenu" class="hamMenu">
+					<template v-for="menu in menus">
+						<li class="hamMenuItem">
+							<a :href="menu.link">
+								<div class="iconContainer">
+									<img :src="menu.icon" alt="" class="menuIcon" />
+								</div>
+								<h5 class="menuTitle">{{menu.title}}</h5>
+							</a>
+						</li>
+					</template>
+				</ul>
+			</nav>
+		</div>
+	</nav>
+	<div class="hamMask" style="opacity: 0"></div>
 </header>
+
+<!-- 購物車彈跳窗 -->
+<div v-if="isShow" id="blackBg" class="blackBg">
+	<div class="shoppingCar container">
+		<div class="carTitle"><h5>購物車明細</h5></div>
+		<ul>
+			<li class="carBar">
+				<p>商品名稱</p>
+				<p>價格</p>
+				<p>數量</p>
+				<p>小計</p>
+			</li>
+
+			<li></li>
+		</ul>
+	</div>
+</div>
