--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -245,3 +245,33 @@
         // display: block;
     }
 }
+.blackBg{
+    width: 100vw; 
+    height: 100vh; 
+    background-color: rgba(0, 0, 0, .2); 
+    position: fixed; 
+    top: 0; 
+    z-index: 1000;
+
+    .shoppingCar{
+       width: 950px;
+       position: absolute;
+       top: 50%;
+       left: 50%;
+       transform: translate(-50%);
+       
+       .carTitle{
+        border: 1px solid $color_Y;
+        background-color: $color_Y;
+        color: $color_W;
+        @include textCenter();
+       }
+       .carBar{
+           display: flex;
+           justify-content: space-around;
+           background-color: $color_W;
+           border-bottom: 1px solid $color_B;
+           padding: 30px;
+       }
+    }
+}
