--- a/src/sass/frontpages/_member_revise.scss
+++ b/src/sass/frontpages/_member_revise.scss
@@ -49,7 +49,7 @@
     padding-top: 40px;
 
 }
-.mb_tel input{
+.mb_tel .mb_pw input{
     width: 700px;
     height: 46px;
     border: 1px solid rgba(196, 196, 196, 0.8);
@@ -60,8 +60,11 @@
 //密碼
 .mb_pw{
     padding-top: 40px;
+    display: flex;
 
 }
+
+
 
 
 
@@ -84,6 +87,11 @@
     border: 1px solid $color_R;
     cursor: pointer;
    
+}
+
+.ch_pw{
+    display: block;
+    color: $color_G;
 }
 
 
