--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,3 +17,5 @@
 @import './frontpages/info.scss';
 @import './frontpages/product_detail.scss';
 @import './frontpages/member.scss';
+@import './frontpages/game';
+@import './frontpages/products';
