--- a/src/layout/password_reset_3.html
+++ b/src/layout/password_reset_3.html
@@ -5,7 +5,7 @@
                 <h4>密碼修改完成</h4>
                 <p>歡迎回到Sìkha牧場</p>
                 <img src="../img/material/animal_horse_run.png" alt="">
-                <button type="button" id="register_complete">完成</button>
+                <button type="button" id="psdReset_complete">完成</button>
             </form>
             <i class="bi bi-x"></i>
         </div>
