feat 新增 member jqy

--- a/src/layout/header.html
+++ b/src/layout/header.html
@@ -37,7 +37,7 @@
 </header>
 
 <!-- 購物車彈跳窗 -->
-<div v-if="isShow" id="blackBg" class="blackBg">
+<!-- <div v-if="isShow" id="blackBg" class="blackBg">
 	<div class="shoppingCar container">
 		<div class="carTitle"><h5>購物車明細</h5></div>
 		<ul>
@@ -51,4 +51,4 @@
 			<li></li>
 		</ul>
 	</div>
-</div>
+</div> -->
